# TicTacToe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json
assets/: config.ini
game/: CMakeLists.txt  Game.cpp  Game.h  GameButton.cpp  GameButton.h  GameSettings.cpp  GameSettings.h  History.cpp  History.h  Menu.cpp  Menu.h  OnlinePlay.cpp  OnlinePlay.h  Subboard.cpp  Subboard.h  Tile.h  inih.h  main.cpp  resource.h  ttt_util.cpp  ttt_util.h
game/GUI/: EditBox.cpp  EditBox.h  GameButton.cpp  GameButton.h
server/: CMakeLists.txt  server_main.cpp
server_multigame/: CMakeLists.txt  server.h  server_multigame.cpp
server_singlegame/: CMakeLists.txt
